name:                tchask
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tchask#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Reader, Printer, Readline, Types
  build-depends:       base >= 4.7 && < 5, parsec, haskeline, containers, mtl
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/githubuser/tchask
